fix font issue pushing ticket button off screen on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ nav .brand-logo{
 }
 
 .team-table-title-next {
-    font-size: 32px;
+    font-size: 24px;
     color: darkslategrey;
 }
 
